feat(web): otimiza carregamento das imagens na galeria
